FIX button header wrap

--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,12 @@ form {
     margin-bottom: 80px;
 }
 
+.jumbotron .button-container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
 /* 
     MAIN
 */
